@@ -5,6 +5,7 @@
 - add TIR (brightness temps) support
 - add CBERS support
 - add global web file support
+- add elevation encoding for mapbox-gl and mapzen
 - removing internal caching
 - update to rasterio 1.0a12
 
